--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>repository</module>
+        <module>questionnaire-survey</module>
+        <module>web-interface</module>
     </modules>
     <packaging>pom</packaging>
 
