--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -17,6 +17,12 @@
     <description>The module with configuration to connect to database</description>
 
     <dependencies>
+        <dependency>
+            <groupId>ru.wkn</groupId>
+            <artifactId>interviewer-entities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
