--- a/questionnaire-survey/pom.xml
+++ b/questionnaire-survey/pom.xml
@@ -16,4 +16,12 @@
     <name>Questionnaire survey</name>
     <description>The module with the opportunity surveying and grading by the results</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.wkn</groupId>
+            <artifactId>interviewer-entities</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
