--- a/web-interface/pom.xml
+++ b/web-interface/pom.xml
@@ -35,6 +35,12 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>ru.wkn</groupId>
+            <artifactId>repository</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
